<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Record">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10pt"
                android:text="@string/record_activity"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#000000"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="start"
            android:orientation="vertical"
            android:paddingLeft="20pt">

            <TextView
                android:id="@+id/timeLengthView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5pt"
                android:text="@string/default_time"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/beginTimeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5pt"
                android:text="@string/begin_time_view" />

            <TextView
                android:id="@+id/endTimeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5pt"
                android:text="@string/end_time_view" />

            <EditText
                android:id="@+id/editTexRecordName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5pt"
                android:ems="12"
                android:hint="@string/name_text_view"
                android:inputType="textPersonName" />

            <Spinner
                android:id="@+id/categorySpinner"
                android:layout_width="100pt"
                android:layout_height="wrap_content"
                android:layout_margin="5pt"
                android:spinnerMode="dialog" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10pt"
                android:backgroundTint="#aaaaaa"
                android:text="@string/cancel_btn" />

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10pt"
                android:text="@string/save_btn" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>