<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10pt"
            android:text="@string/settings_main"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#000000"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/notification_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10pt"
                android:layout_marginRight="10pt"
                android:layout_weight="1"
                android:text="@string/notification_switch" />

            <Button
                android:id="@+id/data_clean_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10pt"
                android:layout_marginRight="10pt"
                android:layout_weight="1"
                android:backgroundTint="#FF0000"
                android:text="@string/data_cleaner"
                app:iconTint="#FF0000" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10pt"
            android:text="@string/settings_cate"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#000000"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ListView
                android:id="@+id/cate_setting_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10" />

            <Button
                android:id="@+id/add_cate_btn"
                android:layout_width="80pt"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_cate_btn" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>