<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25pt"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4">

            <TextView
                android:id="@+id/item_record_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1pt"
                android:text="@string/app_name"
                android:textColor="#000000"
                android:textSize="34sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end">

            <TextView
                android:id="@+id/item_cate_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1pt"
                android:text="@string/exit_yes"
                android:textColor="#000000"
                android:textSize="34sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25pt"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/item_time_delta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_time"
                android:textColor="#000000"
                android:textSize="34sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_begin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_time_view"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/item_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_time_view"
                android:textSize="16sp" />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>

